--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 
 body {
+  
   background-image: repeating-linear-gradient(
       45deg,
       rgba(193, 249, 252, 0.12) 0px,
@@ -16,7 +17,8 @@ body {
       transparent 1px,
       transparent 13px
     ),
-    linear-gradient(90deg, rgb(215, 32, 135), rgb(223, 206, 104));
+    linear-gradient(90deg, rgb(215, 32, 135), rgb(223, 206, 104)) no-repeat;
+    background-size:cover ;
 }
 }
 .todo {
